istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mdag-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mdag
spec:
  hosts:
  - "*"
  gateways:
  - mdag-gateway
  http:
  - match:
    - uri:
        prefix: /request
    route:
    - destination:
        host: request
        port:
          number: 8080
  - match:
    - uri:
        prefix: /response
    route:
    - destination:
        host: response
        port:
          number: 8080
