request-detail-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: request
spec:
  hosts:
    - request
  http:
  - match:
    - uri:
        exact: /request/hello
    - uri:
        prefix: /request

    route:
      destination:
        host: request
        port:
          number: 8080
