response-detail-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: response
spec:
  hosts:
    - response
  http:
  - match:
    - uri:
        exact: /response/hello

    route:
      destination:
        host: response
        port:
          number: 8080
